[package]
name = "Pprediction-rust"
version = "0.1.0"
authors = ["RainbowZephyr <darkfeathers9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.7"
nalgebra = "0.22.0"
rayon = "1.4.0"
cpuprofiler = "0.0.2"
nalgebra-glm = "0.8.0"